[package]
name = "par"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "A flexible progress bar"
repository = "https://github.com/softprops/par"
keywords = ["unix", "terminal", "progress", "progressbar", "io"]
license = "MIT"

[dependencies]
capsize = "0.1"
termsize = "0.1"

[dev_dependencies]
hyper = "0.6"